added inclusion of tests

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,7 +2,7 @@ cmake_minimum_required(VERSION 3.10)
 project(LFUCache)
 
 set(CMAKE_CXX_STANDARD 20)
+add_subdirectory(tests)
 
-add_executable(ideal_cache src/main_ideal_cache.cpp src/IdealCache.tpp)
-
-add_executable(lfu_cache src/main_lfu.cpp src/LFUCache.cpp)
+add_executable(ideal_cache src/main_ideal_cache.cpp src/LFUCache.h)
+add_executable(lfu_cache src/main_lfu.cpp src/IdealCache.h)
